# qstore

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: router.py
api/authentication/: urls.py  views.py
api/product/: urls.py  views.py
api/user_cabinet/: urls.py  views.py
apps/authentication/: models.py  serializers.py
apps/authentication/migrations/: 0001_initial.py
apps/product/: filters.py  models.py  serializers.py
apps/product/migrations/: 0001_initial.py
apps/user_cabinet/: apps.py
core/: settings.py  urls.py
